# aoi-game-launcher

./: README.md  asgardius.page.aoilauncher.json  meson.build
data/: asgardius.page.aoilauncher.desktop  meson.build
src/: main.py  meson.build
