configure_file(
  input: 'asgardius.page.aoilauncher.desktop',
  output: 'asgardius.page.aoilauncher.desktop',
  copy: true,
  install: true,
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('asgardius.page.aoilauncher.png',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'))
